Adds checker framework